TESTS =
lib_LTLIBRARIES = libaxis2_util.la

libaxis2_util_la_SOURCES = hash.c \
                        allocator.c \
                        env.c \
                        error.c \
                        stream.c \
                        log.c \
                        string.c \
                        qname.c \
                        array_list.c \
                        linked_list.c \
                        utils.c \
                        dir_handler.c \
                        file_handler.c \
                        file_diff.c\
                        class_loader.c\
                        network_handler.c \
                        file.c\
                        uuid_gen.c\
                        thread_pool.c \
                        property.c \
                        types.c \
						param.c \
						param_container.c \
						dll_desc.c\
                        stack.c

INCLUDES = -I$(top_builddir)/include \
            -I$(top_builddir)/modules/util \
            -I$(top_builddir)/modules/platforms
